--- a/package.json
+++ b/package.json
@@ -1,31 +1,52 @@
 {
-  "name": "googleform-auto-post",
-  "displayName": "Googleform auto post",
-  "version": "0.0.1",
-  "description": "A basic Plasmo extension.",
-  "author": "Shuichi Sato <syuchan.dev@gmail.com>",
-  "scripts": {
-    "dev": "plasmo dev",
-    "build": "plasmo build",
-    "package": "plasmo package"
-  },
-  "dependencies": {
-    "plasmo": "0.84.2",
-    "react": "18.2.0",
-    "react-dom": "18.2.0"
-  },
-  "devDependencies": {
-    "@ianvs/prettier-plugin-sort-imports": "4.1.1",
-    "@types/chrome": "0.0.258",
-    "@types/node": "20.11.5",
-    "@types/react": "18.2.48",
-    "@types/react-dom": "18.2.18",
-    "prettier": "3.2.4",
-    "typescript": "5.3.3"
-  },
-  "manifest": {
-    "host_permissions": [
-      "https://*/*"
-    ]
-  }
+    "name": "googleform-auto-post",
+    "displayName": "Googleform auto post",
+    "version": "0.0.1",
+    "description": "A basic Plasmo extension.",
+    "author": "Shuichi Sato <syuchan.dev@gmail.com>",
+    "scripts": {
+        "dev": "plasmo dev",
+        "build": "plasmo build",
+        "package": "plasmo package",
+        "format": "prettier --write ."
+    },
+    "dependencies": {
+        "@plasmohq/messaging": "^0.6.2",
+        "@plasmohq/storage": "^1.9.3",
+        "@radix-ui/react-checkbox": "^1.0.4",
+        "@radix-ui/react-collapsible": "^1.0.3",
+        "@radix-ui/react-icons": "^1.3.0",
+        "@radix-ui/react-label": "^2.0.2",
+        "@radix-ui/react-popover": "^1.0.7",
+        "@radix-ui/react-slot": "^1.0.2",
+        "@radix-ui/react-tooltip": "^1.0.7",
+        "class-variance-authority": "^0.7.0",
+        "clsx": "^2.1.0",
+        "plasmo": "0.84.2",
+        "react": "18.2.0",
+        "react-dom": "18.2.0",
+        "tailwind-merge": "^2.2.1",
+        "tailwindcss-animate": "^1.0.7"
+    },
+    "devDependencies": {
+        "@ianvs/prettier-plugin-sort-imports": "4.1.1",
+        "@types/chrome": "0.0.258",
+        "@types/node": "20.11.5",
+        "@types/react": "18.2.48",
+        "@types/react-dom": "18.2.18",
+        "autoprefixer": "^10.4.17",
+        "postcss": "^8.4.35",
+        "prettier": "3.2.4",
+        "tailwindcss": "^3.4.1",
+        "typescript": "5.3.3"
+    },
+    "manifest": {
+        "host_permissions": [
+            "https://*/*"
+        ],
+        "permissions": [
+            "alarms",
+            "notifications"
+        ]
+    }
 }
