--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,19 +1,12 @@
 {
-  "extends": "plasmo/templates/tsconfig.base",
-  "exclude": [
-    "node_modules"
-  ],
-  "include": [
-    ".plasmo/index.d.ts",
-    "./**/*.ts",
-    "./**/*.tsx"
-  ],
-  "compilerOptions": {
-    "paths": {
-      "~*": [
-        "./*"
-      ]
+    "extends": "plasmo/templates/tsconfig.base",
+    "exclude": ["node_modules"],
+    "include": [".plasmo/index.d.ts", "./**/*.ts", "./**/*.tsx"],
+    "compilerOptions": {
+        "paths": {
+            "@/*": ["./src/*"],
+            "@~/*": ["./assets/*"],
+        },
+        "baseUrl": ".",
     },
-    "baseUrl": "."
-  }
 }
